Add game example

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
+    <title>HackingNight Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="assets/css/main.css" type="text/css"></link>
-    <title>Hello</title>
+    <script src="assets/lib/phaser.js"></script>
+
 </head>
 <body>
-    <p th:text="'Hello ' + ${name} + '!'" />
+    <script type="text/javascript" src="app/gameworld.js"></script>
 </body>
 </html>
