--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <title>HackingNight</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/main.css" type="text/css"></link>
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css"></link>
 
 
 </head>
