--- a/src/main/resources/templates/inputForm.html
+++ b/src/main/resources/templates/inputForm.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8"></meta>
-    <title></title>
+    <title>HackingNight input</title>
 </head>
 <body>
 <form action="input/send" method="post">
